--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ li{
     }
 }
 
-/* NAVIGATION */
+/* Navegacion */
 .nav{
     position: fixed;
     top: 0;
@@ -115,6 +115,52 @@ li{
     font-size: 1.5rem;
     font-weight: 700;
     border-radius: 50%;
+}
+/* footer */
+footer {
+    background-color: grey;
+    color: rgb(255, 255, 255);
+}
+footer p, a {
+font-size: 12px;
+font-family: 'Roboto', sans-serif;
+}
+
+.btn-footer {
+         color: rgb(255, 255, 255);
+      
+        text-decoration: none;
+        border: 1px solid;
+        border-radius: 43px;
+        font-size: 13px;
+        padding: 7px 30px;
+        line-height: 47px;
+}
+.btn-footer:hover {
+        
+        text-decoration: none;
+       
+}
+.form-footer input[type="text"] {
+border: none;
+border-radius: 16px 0 0 16px;
+outline: none;
+padding-left: 10px;
+
+}
+::placeholder {
+font-size: 10px;
+padding-left: 10px;
+font-style: italic;
+}
+.form-footer input[type="button"] {
+border: none;
+background:#232323;
+margin-left: -5px;
+color: #fff;
+outline: none;
+border-radius: 0 16px 16px 0;
+padding: 2px 12px;
 }
 
 /* PRODUCTOS */
@@ -300,7 +346,7 @@ li{
     }
 }
 
-/*Filter*/
+/*Filtro*/
 .filter{
     padding: 0 2rem;
     width: 100%;
@@ -354,6 +400,11 @@ li{
 }
 
 /* Detalles */
+
+#boton-comprar{
+    color: black;
+    background-color: rgba(73, 163, 73, 0.918);
+}
 .detalles{
     height: 100vh;
     display: flex;
